# MyTeams

./: CMakeLists.txt  Conanfile.txt  Makefile  audio.cpp  babel_client  babel_server  opus.h  opus_defines.h  opus_types.h  setup.sh  test.db
build-client-Qt_6_2_0_for_macOS-Debug/: Makefile  moc_call.cpp  moc_contacts.cpp  moc_finalwindow.cpp  moc_mainwindow.cpp  moc_registerwindow.cpp  ui_call.h  ui_contacts.h  ui_finalwindow.h  ui_mainwindow.h  ui_registerwindow.h
build-client-Qt_6_2_0_for_macOS-Debug/babel_client.app/Contents/: Info.plist
build-client-Qt_6_2_0_for_macOS-Debug/babel_client.app/Contents/MacOS/: babel_client
client/: BabelProtocol.hpp  Client.hpp  Microphone.hpp  Opus.hpp  PortAudio.hpp  RequestHandler.cpp  ResponseHandler.cpp  UdpConnection.hpp  Window.cpp  babel_client  call.ui  client.pro  finalwindow.cpp  finalwindow.h  finalwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registerwindow.cpp  registerwindow.h  registerwindow.ui
client/lib/.libs/: libportaudio.2.dylib
client/libs/.libs/: libopus.0.dylib  opus_demo  repacketizer_demo
server/: command.cpp  dataBase.cpp  server.cpp  server.hpp
